                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-05-2006 fixed: [ 1490939 ] Playlist filenames are run through the fatx conversion while in UTF8.
 - 25-05-2006 fixed: Infinite loop if the progress dialog was started by the player while in fullscreen before rendering was allowed.
 - 25-05-2006 fixed: DoModal() and Show() on dialogs had to be called with the parent window, even though the information was never used.
 - 25-05-2006 fixed: last.fm directory was broken.
 - 25-05-2006 fixed: forgot to enable subtitles after user browsed for one.
 - 25-05-2006 fixed: Black button for MyVideo playlist was not mapped correctly
 - 25-05-2006 updated: German language file
 - 24-05-2006 fixed: folder.jpg didn't work in Programs or Scripts.
 - 24-05-2006 fixed: [ 1492671 ] .mov no sound with mplayer, CVS now
 - 23-05-2006 added: localization of temperature and speed unit via langinfo.xml
 - 23-05-2006 fixed: [ 1493130 ] XBMC crashes at the end of Apple Lossless files.
 - 23-05-2006 fixed: karaoke should now start on next song.
 - 22-05-2006 fixed: dvdplayer wouldn't set language based on xbmc language settings as it should
 - 22-05-2006 fixed: inverted dvd highlights. spu used for background and selected is totaly transparent
 - 22-05-2006 fixed: Settings context menu item was broken
 - 22-05-2006 fixed: Thumb issues with thumbs popping up on parent items, and not showing up for some stacked items.
 - 22-05-2006 fixed: A few minor directory history issues with the new My Programs system.
 - 21-05-2006 removed: <home> tag from XBoxMediaCenter.xml

******************************************************************************